//==============================================================================================
// DockCtrl: A dockable widget framework for U++
// Author:	 Ismail YILMAZ
//==============================================================================================


[+] - new feature
[-] - bugfix
[*] - change


0.50
	> First Public Beta - public release name DockCtrl DEV802b.1
	> Package versioning is synchronised with the main Ultimate++ releases.
	--------------------------------------------------------------------------------------------
	+ full featured tabbed dock windows implemented.
	  optional "Nested tabbing" (a complex, yet very easy to use tabbing mode) introduced.
	  automatic tab alignment of tabbed windows is made optional.
	+ autohide feature is implemented.
	  "tabbed autohiding" introduced.
	  animated.
	+ introducing "Complex Dockable Framework" concept. namely, numereous and seperate
	  DockCtrl can be nested in any standard U++ Ctrl derived class.
	+ unified (mostly...) Chameleon structure "DockCtrlChStyle" added for easy customization.
	+ internationalization support added. currentyl only Turkish and English languages are supported.
	+ added settings menu
	+ added SetLayout() method for easy instatiation of DockCtrl class.
	+ self-explanatory example code is added to the package.
	* DockPane helper class renamed to PaneFrame;
	* removed Splitter ctrl code from DockPane and made into a seperate custom class PaneSplitter.
	* control panel is heavily improved.
	  from now on, control panel has full access and control over the docked windows.
	- Fixed most of the sizing issues by adding size hint methods (see DockableCtrl.cpp).
	- Many internal bugfix and cleanup.
	
0.51
	> public release name DockCtrl DEV802b.2
	--------------------------------------------------------------------------------------------
	- fixed a nasty bug in TabWindow Detach() method which led to stack overflow error.